--- a/bower.json
+++ b/bower.json
@@ -29,7 +29,8 @@
     "paper-elements": "~1.0.7",
     "iron-elements": "~1.0.9",
     "paper-datatable": "~0.9.8",
-    "ctech-elements": "~1.0.5"
+    "ctech-elements": "~1.0.5",
+    "paper-date-picker": "polymer-paper-datepicker#~1.1.3"
   },
   "resolutions": {
     "polymer": "~1.4.0",
